--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-react": "^7.6.1",
     "flow": "^0.2.3",
     "flow-bin": "^0.65.0",
-    "prettier": "^1.10.2"
+    "prettier": "^1.10.2",
+    "synaptic": "^1.1.4"
   }
 }
